--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "cssdom": "^1.0.21",
+    "ensure-posix-path": "^1.0.2",
     "file-system": "^2.2.2",
     "htmldom": "^3.0.4"
   }
